--- a/AcidsBasesSalts.html
+++ b/AcidsBasesSalts.html
@@ -171,7 +171,7 @@
 <p>Acids furnish <span class="math inline">\ce{H+}</span> ions or <span class="math inline">\ce{H3O+}</span> ions when dissolved in water. Acids have one or more replaceable <span class="math inline">\ce{H}</span> atoms</p>
 <details>
 <summary>
-Arrhenius Concept of Acids
+<p><strong>Arrhenius Concept of Acids</strong></p>
 </summary>
 <hr />
 <p>Acid is capable of producing hydrogen ion <span class="math inline">\ce{H+}</span> by dissociating in aqueous solution. This reaction can be represented by</p>
@@ -204,7 +204,8 @@ Arrhenius Concept of Acids
 <li><p><strong>Inorganic Acids</strong> are found from rocks and minerals.</p>
 <p>Eg: <span class="math inline">\ce{HCl}</span> (Hydrochloric Acid), <span class="math inline">\ce{HNO3}</span> (Nitric Acid), <span class="math inline">\ce{H2SO4}</span> (Sulphuric Acid)</p></li>
 </ul></li>
-<li><p><strong>Based on their Basicity</strong> Basicity = The number of <span class="math inline">\ce{H}</span> atoms replaceable by a base in a particular acid.</p>
+<li><p><strong>Based on their Basicity</strong></p>
+<p>Basicity = The number of <span class="math inline">\ce{H}</span> atoms replaceable by a base in a particular acid.</p>
 <ul>
 <li><p><strong>Monabasic Acid</strong> gives one <span class="math inline">\ce{H+}</span> ion per molecule of the acid in solution.</p>
 <p>Eg: <span class="math inline">\ce{HCl}</span>, <span class="math inline">\ce{HNO3}</span></p></li>
