--- a/AcidsBasesSalts.html
+++ b/AcidsBasesSalts.html
@@ -227,5 +227,6 @@
 <li><strong>Dilute Acid</strong> has a relatively low percentage of acid in its aqueous solution.</li>
 </ul></li>
 </ul>
+<p>Created by <em>Dipam Sen</em></p>
 </body>
 </html>
