--- a/Chemistry/AcidsBasesSalts.html
+++ b/Chemistry/AcidsBasesSalts.html
@@ -168,27 +168,30 @@
 <body>
 <h1 id="acids-bases-and-salts">Acids, Bases and Salts</h1>
 <h2 id="acids">Acids</h2>
-<p>Acids furnish <span class="math inline">\ce{H+}</span> ions or <span class="math inline">\ce{H3O+}</span> ions when dissolved in water. Acids have one or more replaceable <span class="math inline">\ce{H}</span> atoms</p>
+<p>Acids furnish <span class="math inline">\ce{H+}</span> ions or <span class="math inline">\ce{H3O+}</span> ions when dissolved in water. Acids have one or more replaceable <span class="math inline">\ce{H}</span> atoms.</p>
 <hr />
 <details>
 <summary>
 <p><strong>Arrhenius Concept of Acids</strong></p>
 </summary>
 <p>Acid is capable of producing hydrogen ion <span class="math inline">\ce{H+}</span> by dissociating in aqueous solution. This reaction can be represented by</p>
-<p><span class="math display">\ce{\ud{HA(aq)}{Acid} -&gt; \ud{H+(aq)}{Hydrogen Ion (proton)} \ud{A-(aq)}{}}</span></p>
+<p><span class="math display">\ce{HA(aq) -&gt; H+(aq) A-(aq)}</span></p>
 <p>For example: Hydrochloric Acid <span class="math inline">(\ce{HCl})</span></p>
 <p><span class="math display">\ce{HCl(aq) -&gt; H+(aq) Cl-(aq)}</span></p>
 <p>The proton or hydrogen ion binds itself to a water molecule to form a <strong>hydronium ion</strong> <span class="math inline">\ce{(H3O+)}</span></p>
-<p><span class="math display">\ce{\ud{H+}{Hydrogen Ion (proton)} + \ud{H2O}{Water} -&gt; \ud{H3O+}{Hydronium Ion}}</span></p>
+<p><span class="math display">\ce{\ud{H+}{Hydrogen Ion} + \ud{H2O}{Water} -&gt; \ud{H3O+}{Hydronium Ion}}</span></p>
 <p>The <strong>hydronium ion</strong> is also known as <strong>oxonium ion</strong> or <strong>hydroxonium ion</strong>.</p>
-<p>The first equation can be rewritten as</p>
-<p><span class="math display">\ce{HA(aq) + H2O -&gt; H3O+(aq) A-(aq)}</span></p>
 </details>
 <hr />
 <p><br></p>
 <blockquote>
-<p><strong>Note</strong>: <span class="math inline">\ce{H+}</span> ions are protons.</p>
+<p><strong>Note</strong>:</p>
+<ul>
+<li><span class="math inline">\ce{H+}</span> ions are protons.</li>
+<li>Metals usually are <strong>basic</strong> in nature whereas Non metals usually are <strong>acidic</strong> in nature.</li>
+</ul>
 </blockquote>
+<h3 id="properties-of-acids">Properties of Acids</h3>
 <ul>
 <li>Acids generally have sour taste.</li>
 <li>Acids change Blue litmus Red.</li>
@@ -200,7 +203,11 @@
 <li><p><strong>Based on Source:</strong></p>
 <ul>
 <li><p><strong>Organic Acids</strong> are present in plants and animals (living beings).</p>
-<p>Eg: <span class="math inline">\ce{HCOOH}</span> (Formic Acid), <span class="math inline">\ce{CH3COOH}</span> (Acetic Acid)</p></li>
+<p>Eg:</p>
+<ul>
+<li><span class="math inline">\ce{HCOOH}</span> (Formic Acid/Methanoic Acid, found in <strong>stings of bees/ants</strong>)</li>
+<li><span class="math inline">\ce{CH3COOH}</span> (Acetic Acid/Ethanoic Acid, found in <strong>Vinegar</strong>)</li>
+</ul></li>
 <li><p><strong>Inorganic Acids</strong> are found from rocks and minerals.</p>
 <p>Eg: <span class="math inline">\ce{HCl}</span> (Hydrochloric Acid), <span class="math inline">\ce{HNO3}</span> (Nitric Acid), <span class="math inline">\ce{H2SO4}</span> (Sulphuric Acid)</p></li>
 </ul></li>
@@ -227,6 +234,84 @@
 <li><strong>Dilute Acid</strong> has a relatively low percentage of acid in its aqueous solution.</li>
 </ul></li>
 </ul>
+<h3 id="chemical-properties-of-acids">Chemical Properties of Acids</h3>
+<ul>
+<li><p><strong>Reaction of acids with Metals</strong></p>
+<p>Acids give hydrogen gas along with respective salt when they react with a metal.</p>
+<p><span class="math inline">\ce{Metal + Acid -&gt; Salt + Hydrogen}</span></p>
+<p>Examples:</p>
+<ul>
+<li><span class="math inline">\ce{Zn + 2HCl -&gt; ZnCl2 + H2 ^}</span></li>
+<li><span class="math inline">\ce{2Na + 2HCl -&gt; 2NaCl2 + H2 ^}</span></li>
+<li><span class="math inline">\ce{Fe + 2HCl -&gt; FeCl2 + H2 ^}</span></li>
+<li><span class="math inline">\ce{Zn + H2SO4 -&gt; ZnSO4 + H2 ^}</span></li>
+</ul></li>
+<li><p><strong>Reaction of acids with Metal Carbonates</strong></p>
+<p>Acids react with metal carbonates to give respective salt, carbon dioxide and water.</p>
+<p><span class="math inline">\ce{Metal Carbonate + Acid -&gt; Salt + Carbon Dioxide + Water}</span></p>
+<p>Examples:</p>
+<ul>
+<li><span class="math inline">\ce{CaCO3 + H2SO4 -&gt; CaSO4 + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{Na2CO3 + H2SO4 -&gt; Na2SO4 + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{CaCO3 + 2HCl -&gt; CaCl2 + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{Na2CO3 + 2HCl -&gt; 2NaCl + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{MgCO3 + 2HCl -&gt; MgCl2 + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{Na2CO3 + 2HNO3 -&gt; NaNO3 + H2O + CO2 ^}</span></li>
+</ul></li>
+<li><p><strong>Reaction of acids with Metal Hydrogen Carbonates (Bicarbonates)</strong></p>
+<p>Acids give <span class="math inline">\ce{CO2}</span> gas, respective salt and water when they react with metal hydrogen carbonates.</p>
+<p><span class="math inline">\ce{Metal Bicarbonate + Acid -&gt; Salt + Water + Carbon Dioxide}</span></p>
+<p>Examples:</p>
+<ul>
+<li><span class="math inline">\ce{NaHCO3 + HCl -&gt; NaCl + H2O + CO2 ^}</span></li>
+<li><span class="math inline">\ce{2NaHCO3 + H2SO4 -&gt; Na2SO4 + 2H2O + 2CO2 ^}</span></li>
+</ul>
+<p><br></p></li>
+</ul>
+<blockquote>
+<p><strong>Notes:</strong></p>
+<ul>
+<li><p>Sodium Bicarbonate <span class="math inline">(\ce{NaHCO3})</span> is also known as Sodium Hydrogen Carbonate, <strong>Baking Soda</strong> and <strong>Baking Powder</strong></p></li>
+<li><p>The gas evolved in the reaction of acid and metal hydrogen carbonate or bicarbonate, <strong>turns lime water milky</strong>. This indicates that the gas is Carbon Dioxide <span class="math inline">(\ce{CO2})</span>.</p>
+<p>This is due to the formation of white ppt of <strong>Calcium Carbonate</strong>, <span class="math inline">\ce{CaCO3}</span></p></li>
+</ul>
+<p><span class="math display">\ud{CaOH2 + CO2 -&gt; H2O + CaCO3 v}{Carbon Dioxide turns lime water milky.}</span></p>
+<ul>
+<li><p>But when excess <span class="math inline">\ce{CO2}</span> is passed through lime water, it makes the milky colour disappear.</p>
+<p>This happens because of formation of <strong>calcium hydrogen carbonate</strong>. As it is soluble in water, the milky colour dissapears.</p></li>
+</ul>
+<p><span class="math display">\ud{CaCO3 + H2O + CO2 -&gt; CaHCO3(aq)}{Excess carbon dioxide makes the milky colour disappear.}</span></p>
+<ul>
+<li><strong>Calcium Carbonate</strong>, <span class="math inline">\ce{CaCO3}</span> is a salt found in <strong>eggshells</strong>, <strong>chalk powder</strong> and <strong>marble</strong>.</li>
+</ul>
+</blockquote>
+<ul>
+<li><p><strong>Reaction of acids with Metallic oxides</strong></p>
+<p>Metal oxides are basic in nature. Thus, when an acid reacts with a metal oxide, both neutralize each other. In this reaction, respective salt and water is formed.</p>
+<p><span class="math inline">\ce{Acid + Metal Oxide -&gt; Salt + Water}</span></p>
+<p>Examples:</p>
+<ul>
+<li><span class="math inline">\ce{2HCl + CaO -&gt; CaCl2 + H2O}</span></li>
+<li><span class="math inline">\ce{H2SO4 + ZnO -&gt; ZnSO4 + H2O}</span></li>
+<li><span class="math inline">\ce{6HCl + Al2O3 -&gt; 2AlCl3 + 3H2O}</span></li>
+</ul></li>
+</ul>
+<h3 id="strong-and-weak-acids">Strong and Weak Acids</h3>
+<table>
+<thead>
+<tr class="header">
+<th>Strong Acids</th>
+<th>Weak Acids</th>
+</tr>
+</thead>
+<tbody>
+</tbody>
+</table>
+|
+<li>
+These acids completely dissociate in water. |
+<li>
+<p>These acids dissociate partially in water. |</p>
 <p>Created by <em>Dipam Sen</em></p>
 </body>
 </html>
